--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,31 +7,63 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:navGraph="@navigation/navigation"
-    app:defaultNavHost="true"
-    app:startDestination="@id/mainActivity">
+    app:defaultNavHost="true">
 
-    <activity
-        android:id="@+id/mainActivity"
-        android:name="project.stN991536967.snehal.MainActivity"
-        android:label="activity_main"
-        tools:layout="@layout/activity_main" />
     <fragment
         android:id="@+id/loginFragment"
         android:name="project.stN991536967.snehal.loginFragment"
         android:label="loginFragment" >
         <action
-            android:id="@+id/action_loginFragment_to_mainActivity"
-            app:destination="@id/mainActivity" />
-        <action
-            android:id="@+id/action_loginFragment_to_registerFragment"
-            app:destination="@id/registerFragment" />
+            android:id="@+id/action_loginFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
         android:name="project.stN991536967.snehal.registerFragment"
         android:label="registerFragment" >
         <action
-            android:id="@+id/action_registerFragment_to_mainActivity"
-            app:destination="@id/mainActivity" />
+            android:id="@+id/action_registerFragment_to_welcomeFragment"
+            app:destination="@id/welcomeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="project.stN991536967.snehal.homeFragment"
+        android:label="homeFragment" >
+        <action
+            android:id="@+id/action_homeFragment_to_bmiFragment"
+            app:destination="@id/bmiFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_addlogsFragment"
+            app:destination="@id/addlogsFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_viewlogFragment"
+            app:destination="@id/viewlogFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_welcomeFragment"
+            app:destination="@id/welcomeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/bmiFragment"
+        android:name="project.stN991536967.snehal.bmiFragment"
+        android:label="bmiFragment" />
+    <fragment
+        android:id="@+id/addlogsFragment"
+        android:name="project.stN991536967.snehal.addlogsFragment"
+        android:label="addlogsFragment" />
+    <fragment
+        android:id="@+id/viewlogFragment"
+        android:name="project.stN991536967.snehal.viewlogFragment"
+        android:label="viewlogFragment" >
+        <action
+            android:id="@+id/action_viewlogFragment_to_addlogsFragment"
+            app:destination="@id/addlogsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/welcomeFragment"
+        android:name="project.stN991536967.snehal.welcomeFragment"
+        android:label="welcomeFragment" >
+        <action
+            android:id="@+id/action_welcomeFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
 </navigation>
