all pages ready and done

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,13 +5,14 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#8579747A">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="32dp"
             android:text="Welcome"
             android:textColor="#000000"
             android:textSize="36sp"
@@ -25,11 +26,12 @@
             android:id="@+id/editTextEmail"
             android:layout_width="329dp"
             android:layout_height="57dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="72dp"
             android:ems="10"
             android:hint="Email"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.475"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -37,7 +39,7 @@
             android:id="@+id/editTextPass"
             android:layout_width="327dp"
             android:layout_height="57dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="20dp"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
@@ -50,25 +52,26 @@
             android:id="@+id/btnLogin"
             android:layout_width="250dp"
             android:layout_height="60dp"
-            android:layout_marginTop="45dp"
+            android:layout_marginTop="64dp"
 
             android:text="Login"
             android:textAllCaps="false"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextPass" />
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="310dp"
-            android:layout_height="221dp"
+            android:layout_width="223dp"
+            android:layout_height="159dp"
+            android:layout_marginTop="52dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-             />
+            app:srcCompat="@drawable/login" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
