--- a/app/src/main/res/layout/fragment_addlogs.xml
+++ b/app/src/main/res/layout/fragment_addlogs.xml
@@ -10,6 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#8579747A"
         app:layout_constraintBottom_toBottomOf="@+id/input3"
         app:layout_constraintTop_toBottomOf="@+id/input3">
 
@@ -17,23 +18,15 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
-            android:text="Add Log Exercise"
+            android:layout_marginTop="32dp"
+            android:fontFamily="monospace"
+            android:text="Add Exercise"
+            android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="36sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.171"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="201dp"
-            android:layout_height="47dp"
-            android:layout_marginTop="136dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.166"
+            app:layout_constraintHorizontal_bias="0.466"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,9 +36,10 @@
             android:layout_height="60sp"
             android:layout_marginTop="432dp"
 
-
+            android:backgroundTint="@color/black"
+            android:background="@color/black"
             android:text="Add"
-            android:textColor="@android:color/white"
+            android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.501"
@@ -97,12 +91,27 @@
             android:layout_marginTop="224dp"
             android:ems="10"
 
-            android:hint="Select exercise date"
+            android:fontFamily="monospace"
+            android:hint="Date"
             android:inputType="date"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.45"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/editTextExercise"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="79dp"
+            android:layout_marginTop="44dp"
+            android:layout_marginEnd="122dp"
+            android:ems="10"
+            android:hint="Enter the Exercise"
+            android:inputType="textPersonName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
