--- a/app/src/main/res/layout/fragment_bmi.xml
+++ b/app/src/main/res/layout/fragment_bmi.xml
@@ -8,13 +8,14 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#8579747A">
 
         <EditText
             android:id="@+id/height"
             android:layout_width="207dp"
             android:layout_height="61dp"
-            android:layout_marginTop="9dp"
+            android:layout_marginTop="28dp"
             android:ems="10"
             android:hint="Enter Your Height"
             android:inputType="number"
@@ -64,7 +65,7 @@
             android:id="@+id/weight"
             android:layout_width="213dp"
             android:layout_height="62dp"
-            android:layout_marginTop="21dp"
+            android:layout_marginTop="60dp"
             android:ems="10"
             android:hint="Enter Your Weight"
             android:inputType="number"
@@ -85,14 +86,14 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="174dp"
-            android:layout_height="138dp"
+            android:layout_width="197dp"
+            android:layout_height="134dp"
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-             />
+            app:srcCompat="@drawable/bmi" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
