--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,23 +5,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="374dp"
-            android:layout_height="86dp"
-            android:text="Welcome"
-            android:textAlignment="center"
-            android:textColor="@android:color/black"
-            android:textSize="27sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.486"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.147" />
+        android:layout_height="match_parent"
+        android:background="#8579747A">
 
         <Button
             android:id="@+id/btnViewLogs"
@@ -37,7 +22,7 @@
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.687" />
+            app:layout_constraintVertical_bias="0.828" />
 
         <Button
             android:id="@+id/btnCalculateBMI"
@@ -52,7 +37,7 @@
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.538" />
+            app:layout_constraintVertical_bias="0.707" />
 
         <Button
             android:id="@+id/btnAddLog"
@@ -67,6 +52,15 @@
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.39" />
+            app:layout_constraintVertical_bias="0.579" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="266dp"
+            android:layout_height="215dp"
+            tools:layout_editor_absoluteX="74dp"
+            tools:layout_editor_absoluteY="61dp"
+            tools:src="@drawable/logo" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
