--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -11,11 +11,14 @@
             android:id="@+id/textView2"
             android:layout_width="348dp"
             android:layout_height="60dp"
-            android:layout_marginTop="124dp"
+            android:layout_marginTop="100dp"
+            android:fontFamily="monospace"
             android:text="FIT SHARK"
-            android:textAlignment="center"
 
+            android:textAlignment="center"
+            android:textColor="#000000"
             android:textSize="36sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.492"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,6 +53,14 @@
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonGetStarted" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="296dp"
+            android:layout_height="298dp"
+            android:src="@drawable/welcome"
+            tools:layout_editor_absoluteX="57dp"
+            tools:layout_editor_absoluteY="172dp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
