--- a/app/src/main/res/layout/fragment_addlogs.xml
+++ b/app/src/main/res/layout/fragment_addlogs.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+        name="logViewModel"
+        type="project.stN991536967.snehal.viewModel.AddLogViewModel" />
 
     </data>
 
@@ -75,7 +78,7 @@
             android:id="@+id/input3"
             android:layout_width="91dp"
             android:layout_height="48dp"
-            android:layout_marginTop="316dp"
+            android:layout_marginTop="312dp"
             android:ems="10"
             android:inputType="numberDecimal"
 
