--- a/app/src/main/res/menu/navbar.xml
+++ b/app/src/main/res/menu/navbar.xml
@@ -2,6 +2,10 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Signup" />
-    <item android:title="Login" />
+    <item
+        android:id="@+id/registerFragment"
+        android:title="Signup" />
+    <item
+        android:id="@+id/loginFragment"
+        android:title="Login" />
 </menu>
