--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -6,13 +6,14 @@
     android:name="androidx.navigation.fragment.NavHostFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:defaultNavHost="true"
     app:navGraph="@navigation/navigation"
-    app:defaultNavHost="true">
+    app:startDestination="@id/welcomeFragment">
 
     <fragment
         android:id="@+id/loginFragment"
         android:name="project.stN991536967.snehal.loginFragment"
-        android:label="loginFragment" >
+        android:label="loginFragment">
         <action
             android:id="@+id/action_loginFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
@@ -28,19 +29,27 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="project.stN991536967.snehal.homeFragment"
-        android:label="homeFragment" >
+        android:label="homeFragment">
         <action
             android:id="@+id/action_homeFragment_to_bmiFragment"
-            app:destination="@id/bmiFragment" />
+            app:destination="@id/bmiFragment"
+            app:popUpTo="@id/bmiFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_homeFragment_to_addlogsFragment"
-            app:destination="@id/addlogsFragment" />
+            app:destination="@id/addlogsFragment"
+            app:popUpTo="@id/addlogsFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_homeFragment_to_viewlogFragment"
-            app:destination="@id/viewlogFragment" />
+            app:destination="@id/viewlogFragment"
+            app:popUpTo="@id/viewlogFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_homeFragment_to_welcomeFragment"
-            app:destination="@id/welcomeFragment" />
+            app:destination="@id/welcomeFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/bmiFragment"
@@ -49,21 +58,34 @@
     <fragment
         android:id="@+id/addlogsFragment"
         android:name="project.stN991536967.snehal.addlogsFragment"
-        android:label="addlogsFragment" />
+        android:label="addlogsFragment">
+        <action
+            android:id="@+id/action_addlogsFragment_to_viewlogFragment"
+            app:destination="@id/viewlogFragment"
+            app:popUpTo="@id/viewlogFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
     <fragment
         android:id="@+id/viewlogFragment"
         android:name="project.stN991536967.snehal.viewlogFragment"
-        android:label="viewlogFragment" >
+        android:label="viewlogFragment">
         <action
             android:id="@+id/action_viewlogFragment_to_addlogsFragment"
-            app:destination="@id/addlogsFragment" />
+            app:destination="@id/addlogsFragment"
+            app:popUpTo="@id/addlogsFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/welcomeFragment"
         android:name="project.stN991536967.snehal.welcomeFragment"
-        android:label="welcomeFragment" >
+        android:label="welcomeFragment">
         <action
             android:id="@+id/action_welcomeFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_welcomeFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
     </fragment>
 </navigation>
