--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,9 +41,10 @@
 
         <Button
             android:id="@+id/btnAddLog"
-            android:layout_width="300sp"
-            android:layout_height="60sp"
+            android:layout_width="299dp"
+            android:layout_height="67dp"
 
+            android:layout_marginBottom="282dp"
             android:text="Add log"
             android:textAlignment="center"
             android:textSize="18sp"
@@ -51,15 +52,21 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView4"
             app:layout_constraintVertical_bias="0.579" />
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="266dp"
-            android:layout_height="215dp"
-            tools:layout_editor_absoluteX="74dp"
-            tools:layout_editor_absoluteY="61dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="71dp"
+            android:layout_marginTop="61dp"
+            android:layout_marginEnd="71dp"
+            android:layout_marginBottom="113dp"
+            app:layout_constraintBottom_toTopOf="@+id/btnAddLog"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/logo" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
