--- a/app/src/main/res/layout/fragment_viewlog.xml
+++ b/app/src/main/res/layout/fragment_viewlog.xml
@@ -35,16 +35,20 @@
 
         <EditText
             android:id="@+id/editTextExerciseType"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="278dp"
+            android:layout_height="66dp"
             android:layout_marginStart="93dp"
             android:layout_marginTop="35dp"
             android:layout_marginEnd="108dp"
+            android:layout_marginBottom="36dp"
             android:ems="10"
             android:hint="Exercise Type"
             android:inputType="textPersonName"
+            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.573"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+            app:layout_constraintTop_toBottomOf="@+id/textView9"
+            app:layout_constraintVertical_bias="0.571" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
