--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -58,9 +58,15 @@
             android:id="@+id/imageView"
             android:layout_width="296dp"
             android:layout_height="298dp"
+            android:layout_marginStart="57dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="58dp"
+            android:layout_marginBottom="25dp"
             android:src="@drawable/welcome"
-            tools:layout_editor_absoluteX="57dp"
-            tools:layout_editor_absoluteY="172dp" />
+            app:layout_constraintBottom_toTopOf="@+id/buttonGetStarted"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
