--- a/app/src/main/res/layout/excercise_list.xml
+++ b/app/src/main/res/layout/excercise_list.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="8sp"
+        android:background="#8579747A"
         android:elevation="5sp">
 
         <TextView
@@ -20,6 +21,7 @@
             android:layout_height="32dp"
             android:layout_marginTop="16dp"
             android:text="November 18, 2020 9:00AM"
+            android:textColor="#020202"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
