--- a/app/src/main/res/layout/fragment_bmi.xml
+++ b/app/src/main/res/layout/fragment_bmi.xml
@@ -13,62 +13,64 @@
 
         <EditText
             android:id="@+id/height"
-            android:layout_width="207dp"
-            android:layout_height="61dp"
-            android:layout_marginTop="28dp"
+            android:layout_width="218dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="9dp"
             android:ems="10"
             android:hint="Enter Your Height"
             android:inputType="number"
+            app:layout_constraintBottom_toTopOf="@+id/textHealth"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.485"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/weight" />
 
         <Button
             android:id="@+id/btnCalculate"
             android:layout_width="250sp"
-            android:layout_height="60sp"
-            android:layout_marginTop="12dp"
+            android:layout_height="0dp"
 
+            android:layout_marginBottom="86dp"
             android:text="CALCULATE"
             android:textColor="#ffffff"
             android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/result" />
 
         <TextView
             android:id="@+id/result"
             android:layout_width="332dp"
-            android:layout_height="96dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="13dp"
             android:paddingLeft="40dp"
             android:paddingRight="40dp"
             android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.493"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btnCalculate"
+            app:layout_constraintEnd_toStartOf="@+id/textBmi"
+            app:layout_constraintStart_toStartOf="@+id/textBmi"
             app:layout_constraintTop_toBottomOf="@+id/textHealth" />
 
         <TextView
             android:id="@+id/textBmi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="1dp"
             android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/height" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/textHealth"
+            app:layout_constraintEnd_toStartOf="@+id/textHealth"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
             android:id="@+id/weight"
             android:layout_width="213dp"
-            android:layout_height="62dp"
-            android:layout_marginTop="60dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="13dp"
             android:ems="10"
             android:hint="Enter Your Weight"
             android:inputType="number"
+            app:layout_constraintBottom_toTopOf="@+id/height"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView2" />
@@ -77,23 +79,25 @@
             android:id="@+id/textHealth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="9dp"
+            android:layout_marginBottom="12dp"
             android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/result"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textBmi" />
+            app:layout_constraintStart_toEndOf="@+id/textBmi"
+            app:layout_constraintTop_toBottomOf="@+id/height" />
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="197dp"
-            android:layout_height="134dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="224dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="93dp"
+            android:layout_marginBottom="73dp"
+            app:layout_constraintBottom_toTopOf="@+id/weight"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/bmi" />
+            app:srcCompat="@drawable/bmi"
+            tools:srcCompat="@drawable/bmi" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
