--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -54,6 +54,7 @@
             android:layout_height="60dp"
             android:layout_marginTop="64dp"
 
+            android:background="#000000"
             android:text="Login"
             android:textAllCaps="false"
             android:textColor="#FFFFFF"
