--- a/app/src/main/res/layout/fragment_bmi.xml
+++ b/app/src/main/res/layout/fragment_bmi.xml
@@ -43,8 +43,11 @@
             android:layout_width="332dp"
             android:layout_height="0dp"
             android:layout_marginBottom="13dp"
+            android:isScrollContainer="true"
             android:paddingLeft="40dp"
             android:paddingRight="40dp"
+            android:scrollbars="horizontal|vertical"
+            android:scrollHorizontally="true"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/btnCalculate"
             app:layout_constraintEnd_toStartOf="@+id/textBmi"
