--- a/app/src/main/res/layout/excercise_list.xml
+++ b/app/src/main/res/layout/excercise_list.xml
@@ -10,22 +10,23 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="142dp"
         android:layout_marginTop="8sp"
         android:background="#8579747A"
         android:elevation="5sp">
 
         <TextView
             android:id="@+id/dateLogs"
-            android:layout_width="342dp"
-            android:layout_height="32dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="347dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="56dp"
             android:text="November 18, 2020 9:00AM"
+            android:textAlignment="center"
             android:textColor="#020202"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.231"
+            app:layout_constraintHorizontal_bias="0.774"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,10 +34,10 @@
             android:id="@+id/output1"
             android:layout_width="88dp"
             android:layout_height="31dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="92dp"
             android:text="TextView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.222"
+            app:layout_constraintHorizontal_bias="0.207"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,10 +45,10 @@
             android:id="@+id/output2"
             android:layout_width="88dp"
             android:layout_height="31dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="92dp"
             android:text="TextView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.727"
+            app:layout_constraintHorizontal_bias="0.746"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -55,12 +56,26 @@
             android:id="@+id/btnDelete"
             android:layout_width="30dp"
             android:layout_height="29dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="92dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.958"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@android:drawable/ic_delete" />
+
+        <TextView
+            android:id="@+id/exerciseType"
+            android:layout_width="177dp"
+            android:layout_height="33dp"
+            android:layout_marginTop="16dp"
+            android:text="exercise "
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
