--- a/app/src/main/res/layout/excercise_list.xml
+++ b/app/src/main/res/layout/excercise_list.xml
@@ -19,63 +19,65 @@
             android:id="@+id/dateLogs"
             android:layout_width="347dp"
             android:layout_height="30dp"
-            android:layout_marginTop="56dp"
             android:text="November 18, 2020 9:00AM"
             android:textAlignment="center"
             android:textColor="#020202"
             android:textSize="16sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.774"
+            app:layout_constraintHorizontal_bias="0.25"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.857" />
 
         <TextView
             android:id="@+id/output1"
-            android:layout_width="88dp"
-            android:layout_height="31dp"
-            android:layout_marginTop="92dp"
+            android:layout_width="360dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="60dp"
+            android:fadeScrollbars="true"
+            android:isScrollContainer="true"
+            android:overScrollMode="always"
+            android:scrollbars="horizontal|vertical"
+            android:scrollHorizontally="true"
             android:text="TextView"
+            android:verticalScrollbarPosition="right"
+            app:layout_constraintBottom_toTopOf="@+id/dateLogs"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.207"
+            app:layout_constraintHorizontal_bias="0.313"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/output2"
-            android:layout_width="88dp"
-            android:layout_height="31dp"
-            android:layout_marginTop="92dp"
-            android:text="TextView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.746"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
             android:id="@+id/btnDelete"
             android:layout_width="30dp"
             android:layout_height="29dp"
-            android:layout_marginTop="92dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.958"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.176"
             app:srcCompat="@android:drawable/ic_delete" />
 
         <TextView
             android:id="@+id/exerciseType"
             android:layout_width="177dp"
             android:layout_height="33dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:text="exercise "
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textSize="24sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/output1"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.068"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
