--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -5,8 +5,8 @@
 
     <data>
         <variable
-        name="logViewModel"
-        type="project.stN991536967.snehal.viewModel.AddLogViewModel" />
+            name="logViewModel"
+            type="project.stN991536967.snehal.viewModel.AddLogViewModel" />
 
     </data>
 
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:fontFamily="monospace"
-            android:text="Add Exercise"
+            android:text="Update Exercise"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="36sp"
@@ -34,14 +34,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/btnAdd"
+            android:id="@+id/btnUpdate"
             android:layout_width="250sp"
             android:layout_height="60sp"
             android:layout_marginTop="520dp"
 
             android:background="@color/black"
             android:backgroundTint="@color/black"
-            android:text="Add"
+            android:text="Update"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
