--- a/app/src/main/res/menu/options.xml
+++ b/app/src/main/res/menu/options.xml
@@ -2,8 +2,16 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="View Logs" />
-    <item android:title="Add Logs" />
-    <item android:title="BMI" />
-    <item android:title="Logout" />
+    <item
+        android:id="@+id/addlogsFragment"
+        android:title="Add Logs" />
+    <item
+        android:id="@+id/viewlogFragment"
+        android:title="View Logs" />
+    <item
+        android:id="@+id/bmiFragment"
+        android:title="BMI" />
+    <item
+        android:id="@+id/welcomeFragment"
+        android:title="Logout" />
 </menu>
