--- a/app/src/main/res/layout-land/fragment_bmi.xml
+++ b/app/src/main/res/layout-land/fragment_bmi.xml
@@ -13,42 +13,43 @@
 
         <EditText
             android:id="@+id/height"
-            android:layout_width="218dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="9dp"
+            android:layout_width="323dp"
+            android:layout_height="67dp"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="46dp"
             android:background="#BFBEF4"
             android:ems="10"
             android:hint="Enter Your Height"
             android:inputType="number"
             android:textColorHint="#E91E63"
-            app:layout_constraintBottom_toTopOf="@+id/textHealth"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/result"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/weight"
             tools:ignore="TextContrastCheck" />
 
         <Button
             android:id="@+id/btnCalculate"
-            android:layout_width="250sp"
-            android:layout_height="0dp"
+            android:layout_width="253dp"
+            android:layout_height="72dp"
 
-            android:layout_marginBottom="86dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="239dp"
             android:background="#D3F389"
             android:fontFamily="monospace"
             android:gravity="center"
             android:text="CALCULATE"
             android:textColor="#FF0000"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/result" />
+            app:layout_constraintTop_toBottomOf="@+id/height" />
 
         <TextView
             android:id="@+id/result"
-            android:layout_width="332dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="13dp"
+            android:layout_width="308dp"
+            android:layout_height="136dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="36dp"
             android:background="#BFBEF4"
             android:hint="Result"
             android:isScrollContainer="true"
@@ -58,58 +59,34 @@
             android:scrollHorizontally="true"
             android:textColorHint="#E91E63"
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/btnCalculate"
-            app:layout_constraintEnd_toStartOf="@+id/textBmi"
-            app:layout_constraintStart_toStartOf="@+id/textBmi"
-            app:layout_constraintTop_toBottomOf="@+id/textHealth"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2"
             tools:ignore="TextContrastCheck" />
-
-        <TextView
-            android:id="@+id/textBmi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="1dp"
-            android:textSize="24sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textHealth"
-            app:layout_constraintEnd_toStartOf="@+id/textHealth"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
             android:id="@+id/weight"
-            android:layout_width="213dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="13dp"
+            android:layout_width="325dp"
+            android:layout_height="63dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="46dp"
             android:background="#BFBEF4"
             android:ems="10"
             android:hint="Enter Your Weight"
             android:inputType="number"
             android:textColorHint="#E91E63"
-            app:layout_constraintBottom_toTopOf="@+id/height"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/result"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView2"
             tools:ignore="TextContrastCheck" />
 
-        <TextView
-            android:id="@+id/textHealth"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toTopOf="@+id/result"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textBmi"
-            app:layout_constraintTop_toBottomOf="@+id/height" />
-
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="224dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="93dp"
-            android:layout_marginBottom="73dp"
-            app:layout_constraintBottom_toTopOf="@+id/weight"
+            android:layout_width="174dp"
+            android:layout_height="79dp"
+            android:layout_marginTop="26dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.499"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/bmi"
