--- a/app/src/main/res/layout-land/fragment_help.xml
+++ b/app/src/main/res/layout-land/fragment_help.xml
@@ -11,42 +11,57 @@
             android:id="@+id/textView2"
             android:layout_width="348dp"
             android:layout_height="60dp"
-            android:layout_marginTop="100dp"
-            android:layout_marginBottom="34dp"
-            android:fontFamily="monospace"
+            android:layout_marginTop="33dp"
 
-            android:text="About"
+            android:fontFamily="monospace"
+            android:text="FitShark "
             android:textAlignment="center"
             android:textColor="#FF9800"
             android:textSize="36sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/textView4"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.492"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="422dp"
-            android:layout_height="551dp"
-            android:layout_marginStart="34dp"
-            android:layout_marginEnd="36dp"
-            android:layout_marginBottom="112dp"
+            android:layout_width="654dp"
+            android:layout_height="197dp"
+            android:layout_marginStart="38dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="39dp"
+            android:layout_marginBottom="56dp"
             android:background="#BFBEF4"
-            android:fontFamily="monospace"
+            android:hint="Enter Message Here ...."
             android:isScrollContainer="true"
+            android:overScrollMode="always"
             android:scrollbars="vertical"
-            android:text="Simple app to keep track of workout."
-            android:textColor="#E91E63"
+            android:textColorHint="#E91E63"
             android:textSize="20sp"
             android:textStyle="bold"
             android:verticalScrollbarPosition="right"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.487"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView5"
             tools:ignore="TextContrastCheck" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="174dp"
+            android:layout_height="53dp"
+            android:layout_marginStart="278dp"
+            android:layout_marginEnd="279dp"
+            android:text="Help"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="#3DFF07"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
