--- a/app/src/main/res/layout-land/fragment_about.xml
+++ b/app/src/main/res/layout-land/fragment_about.xml
@@ -11,7 +11,7 @@
             android:id="@+id/textView2"
             android:layout_width="348dp"
             android:layout_height="60dp"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="30dp"
             android:layout_marginBottom="34dp"
             android:fontFamily="monospace"
 
@@ -22,17 +22,18 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/textView4"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.492"
+            app:layout_constraintHorizontal_bias="0.493"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="422dp"
-            android:layout_height="551dp"
+            android:layout_width="545dp"
+            android:layout_height="226dp"
             android:layout_marginStart="34dp"
             android:layout_marginEnd="36dp"
-            android:layout_marginBottom="112dp"
+            android:layout_marginBottom="64dp"
             android:background="#BFBEF4"
             android:fontFamily="monospace"
             android:isScrollContainer="true"
@@ -44,8 +45,9 @@
             android:verticalScrollbarPosition="right"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.487"
+            app:layout_constraintHorizontal_bias="0.508"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
             tools:ignore="TextContrastCheck" />
 
 
