--- a/app/src/main/res/layout-land/fragment_addlogs.xml
+++ b/app/src/main/res/layout-land/fragment_addlogs.xml
@@ -13,7 +13,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#8579747A"
         app:layout_constraintBottom_toBottomOf="@+id/input3"
         app:layout_constraintTop_toBottomOf="@+id/input3">
 
@@ -23,9 +22,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:fontFamily="monospace"
-            android:text="Update Exercise"
+            android:text="Add Exercise"
             android:textAlignment="center"
-            android:textColor="#000000"
+            android:textColor="#FF9800"
             android:textSize="36sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -33,63 +32,72 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/btnUpdate"
-            android:layout_width="250sp"
-            android:layout_height="60sp"
-            android:layout_marginTop="520dp"
-
-            android:text="Update"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.503"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <TextView
             android:id="@+id/dateField"
-            android:layout_width="270dp"
-            android:layout_height="52dp"
-            android:layout_marginTop="212dp"
-            android:ems="10"
+            android:layout_width="275dp"
+            android:layout_height="68dp"
+            android:layout_marginStart="36dp"
 
+            android:layout_marginTop="32dp"
+            android:background="#BFBEF4"
+            android:ems="10"
             android:fontFamily="monospace"
             android:hint="Date"
             android:inputType="date"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.448"
+            android:textColorHint="#E91E63"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextExercise"
+            tools:ignore="TextContrastCheck" />
 
         <EditText
             android:id="@+id/editTextExercise"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="79dp"
-            android:layout_marginTop="56dp"
-            android:layout_marginEnd="122dp"
+            android:layout_width="274dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="24dp"
+            android:background="#BFBEF4"
             android:ems="10"
             android:hint="Enter the Exercise"
             android:inputType="textPersonName"
             android:minHeight="48dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            android:textColorHint="#E91E63"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            tools:ignore="TextContrastCheck" />
 
         <EditText
             android:id="@+id/description"
-            android:layout_width="338dp"
-            android:layout_height="210dp"
+            android:layout_width="341dp"
+            android:layout_height="161dp"
+            android:layout_marginStart="31dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="48dp"
+            android:background="#BFBEF4"
             android:ems="10"
             android:gravity="start|top"
             android:hint="exercise"
             android:inputType="textMultiLine"
-            app:layout_constraintBottom_toTopOf="@+id/btnAdd"
+            android:textColorHint="#E91E63"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/dateField"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />
+
+        <Button
+            android:id="@+id/btnAdd"
+            android:layout_width="250sp"
+            android:layout_height="60sp"
+
+            android:layout_marginTop="28dp"
+            android:background="#D3F389"
+            android:gravity="center"
+            android:text="Add"
+            android:textColor="#FF0000"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.455"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dateField"
-            tools:ignore="SpeakableTextPresentCheck" />
+            app:layout_constraintTop_toBottomOf="@+id/dateField" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
