--- a/app/src/main/res/layout-land/fragment_login.xml
+++ b/app/src/main/res/layout-land/fragment_login.xml
@@ -9,16 +9,17 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_width="166dp"
+            android:layout_height="59dp"
+            android:layout_marginStart="292dp"
+            android:layout_marginTop="9dp"
+            android:layout_marginEnd="273dp"
             android:fontFamily="monospace"
             android:text="Welcome"
             android:textColor="#FF9800"
             android:textSize="36sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
@@ -26,15 +27,16 @@
             android:id="@+id/editTextEmail"
             android:layout_width="329dp"
             android:layout_height="57dp"
-            android:layout_marginTop="72dp"
+            android:layout_marginStart="31dp"
+            android:layout_marginTop="34dp"
+            android:layout_marginEnd="28dp"
             android:background="#BFBEF4"
             android:ems="10"
             android:fontFamily="monospace"
             android:hint="Email"
             android:inputType="textEmailAddress"
             android:textColorHint="#E91E63"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.475"
+            app:layout_constraintEnd_toStartOf="@+id/editTextPass"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             tools:ignore="TextContrastCheck" />
@@ -43,40 +45,44 @@
             android:id="@+id/editTextPass"
             android:layout_width="327dp"
             android:layout_height="57dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="34dp"
+            android:layout_marginEnd="16dp"
             android:background="#BFBEF4"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
             android:textColorHint="#E91E63"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.488"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
             tools:ignore="TextContrastCheck" />
 
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="250dp"
             android:layout_height="60dp"
-            android:layout_marginTop="64dp"
 
+            android:layout_marginStart="240dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="241dp"
+            android:layout_marginBottom="47dp"
             android:background="#D3F389"
             android:gravity="center"
             android:text="Login"
             android:textAllCaps="false"
             android:textColor="#FF0000"
             android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextPass" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="223dp"
-            android:layout_height="159dp"
-            android:layout_marginTop="52dp"
+            android:layout_width="146dp"
+            android:layout_height="104dp"
+            android:layout_marginStart="293dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="293dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
