--- a/app/src/main/res/layout-land/fragment_register.xml
+++ b/app/src/main/res/layout-land/fragment_register.xml
@@ -11,36 +11,39 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="11dp"
+            android:layout_marginTop="29dp"
+            android:layout_marginEnd="234dp"
             android:fontFamily="monospace"
             android:text="REGISTER"
             android:textColor="#FF9800"
             android:textSize="35sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/editTextName"
             android:layout_width="329dp"
             android:layout_height="57dp"
-            android:layout_marginTop="11dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="84dp"
             android:background="#BFBEF4"
             android:ems="10"
             android:hint="Name"
             android:inputType="text"
             android:textColorHint="#CB00EF"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/checkBoxTerms"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/imageView3"
             tools:ignore="TextContrastCheck" />
 
         <Button
             android:id="@+id/btnRegister"
             android:layout_width="250dp"
             android:layout_height="60dp"
-            android:layout_marginTop="27dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="65dp"
             android:background="#D3F389"
             android:fontFamily="monospace"
             android:gravity="center"
@@ -49,38 +52,40 @@
             android:textColor="#FF0000"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/checkBoxTerms"
             tools:ignore="MissingConstraints" />
 
         <CheckBox
             android:id="@+id/checkBoxTerms"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
+            android:layout_width="202dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="58dp"
+            android:layout_marginEnd="100dp"
+            android:layout_marginBottom="30dp"
             android:background="#BFBEF4"
             android:fontFamily="monospace"
             android:text="I Accept All Terms and Conditions"
             android:textColor="#CB00EF"
+            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.285"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextPass"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
             tools:ignore="UnknownId,TextContrastCheck" />
 
         <EditText
             android:id="@+id/editTextPass"
             android:layout_width="327dp"
             android:layout_height="57dp"
-            android:layout_marginTop="11dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="388dp"
+            android:layout_marginBottom="81dp"
             android:background="#BFBEF4"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
             android:textColorHint="#CB00EF"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.488"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
             tools:ignore="TextContrastCheck" />
@@ -89,23 +94,27 @@
             android:id="@+id/editTextEmail"
             android:layout_width="329dp"
             android:layout_height="57dp"
-            android:layout_marginTop="11dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="71dp"
             android:background="#BFBEF4"
             android:ems="10"
             android:hint="Email"
             android:inputType="textEmailAddress"
             android:textColorHint="#CB00EF"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btnRegister"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextName"
             tools:ignore="TextContrastCheck" />
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="189dp"
-            android:layout_height="157dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="90dp"
+            android:layout_height="76dp"
+            android:layout_marginStart="231dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/textView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/register" />
