--- a/app/src/main/res/layout-land/fragment_viewlog.xml
+++ b/app/src/main/res/layout-land/fragment_viewlog.xml
@@ -14,29 +14,31 @@
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginStart="213dp"
+            android:layout_marginTop="37dp"
+            android:layout_marginEnd="214dp"
             android:fontFamily="monospace"
             android:text="View Excerices"
             android:textColor="#FF9800"
             android:textSize="36sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.353" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="404dp"
-            android:layout_height="485dp"
-            android:layout_marginTop="204dp"
-            android:layout_marginEnd="7dp"
-            android:background="#BFBEF4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="628dp"
+            android:layout_height="251dp"
+            android:layout_marginStart="51dp"
+            android:layout_marginTop="22dp"
+            android:layout_marginEnd="52dp"
+            android:layout_marginBottom="53dp"
+            android:background="#BFBEF4"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
