--- a/app/src/main/res/layout-land/fragment_welcome.xml
+++ b/app/src/main/res/layout-land/fragment_welcome.xml
@@ -11,25 +11,28 @@
             android:id="@+id/textView2"
             android:layout_width="348dp"
             android:layout_height="60dp"
-            android:layout_marginTop="100dp"
+            android:layout_marginStart="216dp"
+
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="167dp"
             android:fontFamily="monospace"
             android:text="FIT SHARK"
-
             android:textAlignment="center"
             android:textColor="#FF9800"
             android:textSize="36sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.492"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/buttonGetStarted"
 
-            android:layout_width="250dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="336dp"
+            android:layout_width="228dp"
+            android:layout_height="97dp"
+            android:layout_marginStart="98dp"
+            android:layout_marginTop="45dp"
+            android:layout_marginEnd="56dp"
             android:background="#D3F389"
             android:fontFamily="monospace"
             android:gravity="center"
@@ -38,40 +41,38 @@
             android:textAllCaps="false"
             android:textColor="#FF0E00"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintEnd_toStartOf="@+id/imageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <Button
             android:id="@+id/buttonGoToLogin"
-            android:layout_width="250dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="235dp"
+            android:layout_height="95dp"
+            android:layout_marginStart="98dp"
+            android:layout_marginTop="15dp"
+
+            android:layout_marginEnd="56dp"
             android:background="#D3F389"
             android:fontFamily="monospace"
             android:gravity="center"
-
             android:text="Login"
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textColor="#FF0000"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintEnd_toStartOf="@+id/imageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonGetStarted" />
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="296dp"
-            android:layout_height="298dp"
-            android:layout_marginStart="57dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="58dp"
+            android:layout_width="319dp"
+            android:layout_height="279dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="31dp"
             android:src="@drawable/welcome"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 
