--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -16,7 +16,7 @@
 
             android:text="FitShark "
             android:textAlignment="center"
-            android:textColor="#000000"
+            android:textColor="#FF9800"
             android:textSize="36sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -32,10 +32,12 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="36dp"
             android:layout_marginBottom="55dp"
+            android:background="#BFBEF4"
+            android:hint="Enter Message Here ...."
             android:isScrollContainer="true"
             android:overScrollMode="always"
             android:scrollbars="vertical"
-            android:text="TextView"
+            android:textColorHint="#E91E63"
             android:textSize="20sp"
             android:textStyle="bold"
             android:verticalScrollbarPosition="right"
@@ -43,7 +45,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.272"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+            app:layout_constraintTop_toBottomOf="@+id/textView5"
+            tools:ignore="TextContrastCheck" />
 
         <TextView
             android:id="@+id/textView5"
@@ -55,6 +58,7 @@
             android:text="Help"
             android:textAlignment="center"
             android:textAllCaps="true"
+            android:textColor="#3DFF07"
             android:textSize="34sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/textView4"
